--- a/applications/fda-proto.yaml
+++ b/applications/fda-proto.yaml
@@ -9,6 +9,8 @@
     wait_for_nodes: 1
     max-size: 1
 <% end %>
+    loadbalancers:
+    - concurrent_load_balancer: app
     run_list:
     - role[fda-proto]
     vault_access:
